# daemonizer

./: Cargo.toml  README.md
docs/: reference.md
src/: cli.rs  lib.rs  main.rs  misc.rs  windows.rs
src/macos/: mod.rs
src/windows/: child.rs  mod.rs
