[package]
name = "daemonizer"
version = "1.0.0"
authors = ["Saman Tehrani <samanrtehrani@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
tempfile = "3.1.0"
flexi_logger = "0.17.1"
log = "0.4.8"
clap = "2.33.3"
lazy_static = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.4.0"
winapi = { git = "https://github.com/retep998/winapi-rs", branch="0.3", features = ["errhandlingapi", "winbase", "wtsapi32", "securitybaseapi", "handleapi"] }

[[bin]]
name = "daemonize"
path = "src/main.rs"